Updated project files or added new features

--- a/index.html
+++ b/index.html
@@ -1169,17 +1169,17 @@
         <div class="mobile-nav__content">
             <span class="mobile-nav__close mobile-nav__toggler"><i class="fa fa-times"></i></span>
             <div class="logo-box">
-                <a href="index.html" aria-label="logo image"><img src="assets/images/logo-1.png" width="155" alt="image"></a>
+                <a href="index.html" aria-label="logo image"><img src="assets/images/vardan_logo.png" width="155" alt="image"></a>
             </div><!-- /.logo-box -->
             <div class="mobile-nav__container"></div><!-- /.mobile-nav__container -->
             <ul class="mobile-nav__contact list-unstyled">
                 <li>
                     <i class="fa fa-envelope"></i>
-                    <a href="mailto:needhelp@travhub.com">needhelp@travhub.com</a>
+                    <a href="mailto:needhelp@travhub.com">jayeshksingh@gmail.com</a>
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
-                    <a href="tel:666-888-0000">666 888 0000</a>
+                    <a href="tel:666-888-0000">9559110575</a>
                 </li>
             </ul><!-- /.mobile-nav__contact -->
             <div class="mobile-nav__social">
