added new features

--- a/contact.html
+++ b/contact.html
@@ -205,8 +205,15 @@
 			<ul class="contact-info__list">
 				<li class="contact-info__item">
 					<div class="contact-info__icon"><i class="icon-pin-2"></i></div>
-					<h5 class="contact-info__title">Office Address</h5>
-					<p class="contact-info__text">S-4/49 UG-6 Ordely Bazar,Varnasi</p>
+					<h5 class="contact-info__title">Corportate Office Address</h5>
+					<p class="contact-info__text">S-4/49 UG-6 Ordely Bazar,Varanasi</p>
+					<!-- <p class="contact-info__text">Umarpur(Opp. AG office), Jaunpur</p> -->
+					<!-- Sundar Nagar,Umarpur(Opp. AG office), Jaunpur 222002 -->
+				</li><!-- item -->
+				<li class="contact-info__item">
+					<div class="contact-info__icon"><i class="icon-pin-2"></i></div>
+					<h5 class="contact-info__title">Branch Office Address</h5>
+					<!-- <p class="contact-info__text">S-4/49 UG-6 Ordely Bazar,Varanasi</p> -->
 					<p class="contact-info__text">Umarpur(Opp. AG office), Jaunpur</p>
 					<!-- Sundar Nagar,Umarpur(Opp. AG office), Jaunpur 222002 -->
 				</li><!-- item -->
@@ -220,11 +227,11 @@
 					<h5 class="contact-info__title">Email Address</h5>
 					<p class="contact-info__text"><a href="mailto:example@gmail.com">jayeshksingh@gmail.com</a><br><a href="mailto:yourmail@gmail.com"></a></p>
 				</li><!-- item -->
-				<li class="contact-info__item">
+				<!-- <li class="contact-info__item">
 					<div class="contact-info__icon"><i class="icon-help"></i></div>
 					<h5 class="contact-info__title">Supports</h5>
 					<p class="contact-info__text">24/7 any time support team <br>ready for supports.</p>
-				</li><!-- item -->
+				</li> -->
 			</ul>
 		</div>
 	</section>
