minor glitches resolved

--- a/index.html
+++ b/index.html
@@ -856,7 +856,7 @@
                             </div><!-- /.best-feature__image__item-two -->
                         </div><!-- /.best-feature__image -->
                         <div class="best-feature__video">
-                            <a class="video-popup" href="https://www.youtube.com/watch?v=G49_MdP0klg">
+                            <a class="video-popup" href="index.html">
                                 <i class="fas fa-play"></i>
                                 <i class="ripple"></i>
                             </a>
